# horseracing

./: .gitignore  Home.py  context_generator.py  pyproject.toml  questions.txt  readme.md
content/: questions_and_answers.md
page_specs/: 00_home.txt
pages/: 01_Bet_sizing_and_the_Kelly_criterion.py  01_Literature_Review.py  02_Ideas.py  02_Statistics_and_Horseracing:_A_History.py  03_Available_Data.py  03_test.py  04_Betting_Methodologies.py  05_Statistical_Methodologies.py  06_Ideas.py  09_Q&A.py
utils/: navigation.py
