[tool.poetry]
name = "horseracing"
version = "0.1.0"
description = ""
authors = ["William Churcher <williamdfchurcher@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.40.2"
pandas = "^2.2.3"
numpy = "^2.1.3"
rich = "^13.9.4"
pyperclip = "^1.9.0"
matplotlib = "^3.9.3"
plotly = "^5.24.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
